2008-09-16  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeinvocationexpressionbinding.vala:

	Support disabling sentinels, patch by Sam Liddicott,
	fixes bug 548248

2008-09-16  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	GScanner binding fixes, patch by Matías De la Puente,
	fixes bug 548093

2008-09-16  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gio-2.0/:

	Fix g_themed_icon_get_names binding, patch by Gregor Burger,
	fixes bug 543304

	* vapi/gio-2.0.vapi: regenerated

2008-09-16  Gabriel Falcão  <gabriel@nacaolivre.org>

	* vapi/glib-2.0.vapi:

	Add support to get ParamSpec metadata by the methods:
	get_nick(), get_name(), get_blurb(), fixes bug 552320

2008-09-16  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala:

	Add support for virtual and abstract metadata attributes,
	patch by Andrea Del Signore, fixes bug 551205

2008-09-13  Andrea Del Signore  <sejerpz@tin.it>

	* vapi/libbonoboui-2.0.vapi: 

	Fixed Component class type check function name

2008-09-03  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-0.10/:

	Improve Gst.Pad bindings, patch by Ali Sabil

	* vapi/gstreamer-0.10.vapi: regenerated

2008-08-26  Thijs Vermeir  <thijsvermeir@gmail.com>

	* vapi/glib-2.0.vapi:

	Add memset binding

2008-08-25  Thijs Vermeir  <thijsvermeir@gmail.com>

	* vapi/packages/gstreamer-0.10/gstreamer-0.10-custom.vala:

	Add buffer flag set/unset

	* vapi/packages/gstreamer-0.10/gstreamer-0.10.metadata:

	Transfer ownership on gst_buffer_try_new_and_alloc

	* vapi/gstreamer-0.10.vapi: Regenerated

2008-08-25  Thijs Vermeir  <thijsvermeir@gmail.com>

	* vapi/packages/gstreamer-0.10/gstreamer-0.10-custom.vala:

	Add class Event ref/unref function

	* vapi/packages/gdk-2.0/gdk-2.0-custom.vala: Fix indent
	* vapi/gstreamer-0.10.vapi: Regenerated

2008-08-24  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodedynamicpropertybinding.vala:

	Mark generated helper functions for dynamic properties as static
	inline, patch by Ali Sabil
