@@ -51,6 +51,7 @@ Rob Taylor
 Roberto Majadas
 Roland Hostettler
 Ross Burton
+Sam Liddicott
 Samuel Cormier-Iijima
 Stéphan Kochen
 Tai Chi Minh Ralph Eastwood
